--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>TODO</h1>
     <div class="todo_list">
         <form>
-            <input type="text" id="todo_input" placeholder="write text" autocomplete="off">
+            <input type="search" id="todo_input" placeholder="write text" autocomplete="off">
             <button id="add">ADD</button>
         </form>
         <div id="todo">
